infra/k8s/book-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
        - name: book
          image: auttaponkhumhiran/book
---
apiVersion: v1
kind: Service
metadata:
  name: book-srv
spec:
  selector:
    app: book
  ports:
    - name: book
      protocol: TCP
      port: 3000
      targetPort: 3000
