infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: bookstore.dev
      http:
        paths:
          - path: /api/books
            pathType: Exact
            backend:
              service:
                name: book-srv
                port:
                  number: 3000
          - path: /api/orders
            pathType: Exact
            backend:
              service:
                name: order-srv
                port:
                  number: 3000
          - path: /api/payments
            pathType: Exact
            backend:
              service:
                name: payment-srv
                port:
                  number: 3000
          - path: /api/auth
            pathType: Exact
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/customers
            pathType: Exact
            backend:
              service:
                name: customer-srv
                port:
                  number: 3000
          # - path: /
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: auth-srv
          #       port:
          #         number: 3000
          # - path: /
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: client-srv
          #       port:
          # number: 3000
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
# spec:
#   rules:
#     - host: bookstore.dev
#       http:
#         paths:
#           # first with particular API
#           - path: /api/books/?(.*)
#             backend:
#               serviceName: book-srv
#               servicePort: 3000
#           - path: /api/orders/?(.*)
#             backend:
#               serviceName: order-srv
#               servicePort: 3000
# # - path: /api/users/?(.*)
# #   backend:
# #     serviceName: auth-srv
# #     servicePort: 3000
# # - path: /api/tickets/?(.*)
# #   backend:
# #     serviceName: tickets-srv
# #     servicePort: 3000
# # - path: /api/orders/?(.*)
# #   backend:
# #     serviceName: orders-srv
# #     servicePort: 3000
# # # orders is matter
# # # /?(.*) mean catch all
# # - path: /?(.*)
# #   backend:
# #     serviceName: client-srv
# #     servicePort: 3000
